--- a/app/index.html
+++ b/app/index.html
@@ -14,6 +14,7 @@
 		<ul class="nav nav-tabs">
 			<li ng-class="{active: activeTab === 'home'}"><a ui-sref="home">Home</a></li>
 			<li ng-class="{active: activeTab === 'account'}"><a ui-sref="account">Account</a></li>
+			<li ng-class="{active: activeTab === 'internships'}"><a ui-sref="internships">Internships</a></li>
 			<li><a href="/login" target="_self">Logout</a></li>
 		</ul>
 		<div class="flash-message" ng-if="flash">
@@ -38,6 +39,7 @@
     	<script src="app-services/flash.service.js"></script>
   		<script src="home/index.controller.js"></script>
     	<script src="account/index.controller.js"></script>
+    	<script src="internships/index.controller.js"></script>
     </body>
 	</html>
 
