Offer api and routes started

--- a/app/index.html
+++ b/app/index.html
@@ -27,7 +27,7 @@
 		<main ui-view></main>
 
 		<!-- footer -->
-		<footer><button type="button" class="btn btn-danger">Log out</button></footer>
+		<footer><a href="/login" target="_self"><button type="button" class="btn btn-danger">Log out</button></a></footer>
 
 		<!-- external scripts -->
 		<script src="//ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
