--- a/app/offers/index.html
+++ b/app/offers/index.html
@@ -1,6 +1,8 @@
 <h1>Hi {{vm.user.firstName}}! Review your offers below</h1>
 
-<br>
+<br />
+<button class="btn btn-primary">Add Offer</button>
+<br />
 <table class="table table-hover">
     <thead>
         <tr>
