first discover commit

--- a/app/index.html
+++ b/app/index.html
@@ -16,6 +16,7 @@
     			<li ng-class="{active: activeTab === 'account'}"><a ui-sref="account">Account</a></li>
     			<li ng-class="{active: activeTab === 'internships'}"><a ui-sref="internships">Internships</a></li>
     			<li ng-class="{active: activeTab === 'offers'}"><a ui-sref="offers">Offers</a></li>
+                <li ng-class="{active: activeTab === 'discover'}"><a ui-sref="discover">Offers</a></li>
             </ul>
 
     		<div class="flash-message" ng-if="flash">
