--- a/app/internships/index.html
+++ b/app/internships/index.html
@@ -5,20 +5,19 @@
 		<div ng-repeat="internship in vm.user.internships">
 			<div class="form-group">
 				<label for="name">Internship Name</label>
-				<input type="text" id={{internship}}+"name" class="form-control" ng-model=internship.name>
+				<input type="text" id={{internship.id}}+"name" class="form-control" ng-model=internship["name"]>
 			</div>
 			<div class="form-group">
 				<label for="recruiter">Recruiter</label>
-				<input type="text" id={{internship}}+"recruiter" class="form-control" ng-model=internship.recruiter>
+				<input type="text" id={{internship.id}}+"recruiter" class="form-control" ng-model=internship["recruiter"]>
+			</div>
+			<div class="form-group">
+				<button class="btn btn-danger" ng-click="vm.deleteInternship(internship.id)">Delete Internship</button>
 			</div>
 		</div>
-		<div class="form-group">
-			<label for="name">Internship Name</label>
-			<input type="text" id="name" class="form-control" ng-model="vm.user.internships.test.name">
-		</div>
-		<div class="form-group">
-			<label for="recruiter">Recruiter</label>
-			<input type="text" id="recruiter" class="form-control" ng-model="vm.user.internships.test.recruiter">
+		<div class-"form-group">
+			<button class="btn btn-primary" ng-click="vm.addInternship()">
+			Add Internship</button>
 		</div>
 		<div class="form-group">
             <button class="btn btn-primary" ng-click="vm.saveInternships()">Save</button>
