--- a/app/index.html
+++ b/app/index.html
@@ -5,6 +5,7 @@
     	<title>InternGrindr Login</title>
 
     	<link href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css" rel="stylesheet" />
+        <link href="https://cdnjs.cloudflare.com/ajax/libs/angular-material/1.1.1/angular-material.min.css" rel="stylesheet" />
         <link href="app-content/app.css" rel="stylesheet" />
 
     </head>
@@ -51,6 +52,8 @@
   		<script src="home/index.controller.js"></script>
     	<script src="account/index.controller.js"></script>
     	<script src="internships/index.controller.js"></script>
+        <script src="discover/index.controller.js"></script>
+
     </body>
 </html>
 
