Added maps and buttons for offer comparison

--- a/app/index.html
+++ b/app/index.html
@@ -31,6 +31,7 @@
 
 		<!-- external scripts -->
 		<script src="//ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
         <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.5.5/angular.min.js"></script>
         <!-- Angular Material Dependencies -->
         <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.5.5/angular-animate.min.js"></script>
@@ -51,6 +52,7 @@
   		<script src="home/index.controller.js"></script>
     	<script src="account/index.controller.js"></script>
     	<script src="internships/index.controller.js"></script>
+        <script src="offers/index.controller.js"></script>
     </body>
 </html>
 
