--- a/app/offers/index.html
+++ b/app/offers/index.html
@@ -1,23 +1,67 @@
-<h1>Hi {{vm.user.firstName}}! Review your offers below</h1>
+<h1>My Offers</h1>
 
 <br />
-<button class="btn btn-primary">Add Offer</button>
+<div>
+    <button class="btn btn-primary">Add Offer</button>
+    <div class="dropdown">
+
+        <button class="btn btn-secondary dropdown-toggle" type="button" data-toggle="dropdown">Compare Offers
+        <span class="caret"></span></button>
+        <ul class="dropdown-menu">
+            <li data-toggle="modal" data-target="#mapmodal">Location</li>
+            <li>Pay Rate (adjusted)</li>
+        </ul>
+    </div>
+</div>
 <br />
-<table class="table table-hover">
+
+<div id="mapmodal" class="modal fade" tabindex="-1" role="dialog">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-body">
+                <img src="http://maps.googleapis.com/maps/api/staticmap?autoscale=2&size=800x600&maptype=roadmap&key=AIzaSyDodM8wUpuA2CAd6Fa1CEC0Drgv1vxsztM&format=png&visual_refresh=true&markers=size:mid%7Ccolor:0xff0000%7Clabel:F%7CBoston,+MA&markers=size:mid%7Ccolor:0xff0000%7Clabel:G%7CSalt+Lake+City,+UT&markers=size:mid%7Ccolor:0xff0000%7Clabel:B%7CNew+York,+NY" alt="Google Map of Internship Locations" class="img-responsive">
+            </div>
+        </div>
+    </div>
+</div>
+<table ng-app="app" ng-controller="Offers.IndexController" class="table table-hover">
     <thead>
         <tr>
             <th>Company</th>
             <th>Role</th>
-            <th>Wage (Hourly)</th>
+            <th>Pay Rate (Hourly)</th>
             <th>Location</th>
+            <th>Reply By Date</th>
         </tr>
     </thead>
     <tbody>
         <tr>
-            <td>Company 1</td>
-            <td>Software Engineer Intern</td>
-            <td>25</td>
-            <td>San Francisco, CA</td>
+            <td>Facebook</td>
+            <td>EP Intern</td>
+            <td>30</td>
+            <td>Boston, MA</td>
+            <td>Sep 30 2016</td>
         </tr>
+        <tr>
+            <td>Goldman Sachs</td>
+            <td>Business Software Engineer</td>
+            <td>30</td>
+            <td>Salt Lake City, UT</td>
+            <td>Sep 30 2016</td>
+        </tr>
+        <tr>
+            <td>Bloomberg</td>
+            <td>SWE Intern</td>
+            <td>30</td>
+            <td>New York, NY</td>
+            <td>Nov 01 2016</td>
+        </tr>
+        <!-- <tr ng-repeat="offer in offers">
+            <td>{{offer.company}}</td>
+            <td>{{offer.role}}</td>
+            <td>{{offer.payrate}}</td>
+            <td>{{offer.location}}</td>
+            <td>{{offer.replyby}}</td>
+        </tr> -->
     </tbody>
 </table>
