Fixed dropdown menu to link

--- a/app/offers/index.html
+++ b/app/offers/index.html
@@ -1,17 +1,16 @@
 <h1>My Offers</h1>
 
 <br />
-<div>
-    <button class="btn btn-primary">Add Offer</button>
-    <div class="dropdown">
-
-        <button class="btn btn-secondary dropdown-toggle" type="button" data-toggle="dropdown">Compare Offers
-        <span class="caret"></span></button>
-        <ul class="dropdown-menu">
-            <li data-toggle="modal" data-target="#mapmodal">Location</li>
-            <li>Pay Rate (adjusted)</li>
-        </ul>
-    </div>
+<button class="btn btn-primary">Add Offer</button>
+<br />
+<br />
+<div class="dropdown">
+    <button class="btn btn-secondary dropdown-toggle" type="button" data-toggle="dropdown">Compare Offers
+    <span class="caret"></span></button>
+    <ul class="dropdown-menu">
+        <li data-toggle="modal" data-target="#mapmodal"><a href="">Location</a></li>
+        <li><a href="">Pay Rate (adjusted)</a></li>
+    </ul>
 </div>
 <br />
 
