i just want 2 pull :(

--- a/app/index.html
+++ b/app/index.html
@@ -37,6 +37,8 @@
         <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.5.5/angular-animate.min.js"></script>
         <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.5.5/angular-aria.min.js"></script>
         <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.5.5/angular-messages.min.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-bootstrap/2.1.4/ui-bootstrap-tpls.min.js"></script>
+
         <!-- Ui router -->
 
        	<script src="//cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.2.15/angular-ui-router.min.js"></script>
@@ -52,6 +54,7 @@
   		<script src="home/index.controller.js"></script>
     	<script src="account/index.controller.js"></script>
     	<script src="internships/index.controller.js"></script>
+        <script src="internships/modal.controller.js"></script>
         <script src="discover/index.controller.js"></script>
 
     </body>
