--- a/app/internships/index.html
+++ b/app/internships/index.html
@@ -3,36 +3,25 @@
 <div class="form-container">
 	<form method="post">
 		<div ng-repeat="internship in vm.user.internships">
-			<div ng-controller="ModalCtrl as $ctrl">
-				<script type="text/ng-template" id="modalContent.html">
-					<div class="modal-header">
-						<h3 class="modal-title" id="modal-title">Dis Internship</h3>
-					</div>
-					<div class="modal-body" id="modal-body">
-						<ul>
-							<li ng-repeat="item in $ctrl.items">
-								<a href="#" ng-click="$event.preventDefault(); $ctrl.selected.item = item"> {{item}} </a>
-							</li>
-						</ul>
-						Selected: <b>{{ $ctrl.selected.item }}</b>
-					</div>
-					<div class="modal-footer">
-						<button class="btn btn-primary" type="button" ng-click="$ctrl.ok()">OK</button>
-						<button class="btn btn-warning" type="button" ng-click="$ctrl.cancel()">Cancel</button>
-					</div>
-				</script>
-			</div>
-			<button type="button" class="btn btn-default" ng-click="$ctrl.open()">Edit</button>
-			<div class="form-group">
-				<label for="name">Internship Name</label>
-				<input type="text" id={{internship.id}}+"name" class="form-control" ng-model=internship["name"]>
-			</div>
-			<div class="form-group">
-				<label for="recruiter">Recruiter</label>
-				<input type="text" id={{internship.id}}+"recruiter" class="form-control" ng-model=internship["recruiter"]>
-			</div>
+			<button data-toggle="modal" data-target="#internshipmodal" type="button" class="btn btn-default">Edit</button>
 			<div class="form-group">
 				<button class="btn btn-danger" ng-click="vm.deleteInternship(internship.id)">Delete Internship</button>
+			</div>
+			<div id="internshipmodal" class="modal fade" tabindex="-1" role="dialog">
+    			<div class="modal-dialog">
+        			<div class="modal-content">
+            			<div class="modal-body">
+                			<div class="form-group">
+								<label for="name">Internship Name</label>
+								<input type="text" id={{internship.id}}+"name" class="form-control" ng-model=internship["name"]>
+							</div>
+							<div class="form-group">
+								<label for="recruiter">Recruiter</label>
+								<input type="text" id={{internship.id}}+"recruiter" class="form-control" ng-model=internship["recruiter"]>
+							</div>
+            			</div>
+        			</div>
+   				</div>
 			</div>
 		</div>
 		<div class-"form-group">
