Adding offer functionality kind of works

--- a/app/index.html
+++ b/app/index.html
@@ -29,7 +29,7 @@
 		<main ui-view></main>
 
 		<!-- footer -->
-		<footer><a href="/login" target="_self"><button type="button" class="btn btn-danger">Log out</button></a></footer>
+		<footer><a href="/login" target="_self"><button type="button" class="btn btn-danger">Log out</button></a> <br><br></footer>
 
 		<!-- external scripts -->
 		<script src="//ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
