--- a/app/index.html
+++ b/app/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
     	<meta charset="utf-8" />
-    	<title>InternGrindr Login</title>
+    	<title>InternGrindr</title>
 
     	<link href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css" rel="stylesheet" />
         <link href="https://cdnjs.cloudflare.com/ajax/libs/angular-material/1.1.1/angular-material.min.css" rel="stylesheet" />
