--- a/app/offers/index.html
+++ b/app/offers/index.html
@@ -1,30 +1,51 @@
 
 <h1>Review Offers</h1>
+
+<div class="dropdown">
+    <button class="btn btn-secondary dropdown-toggle" type="button" data-toggle="dropdown">Compare Offers
+    <span class="caret"></span></button>
+    <ul class="dropdown-menu">
+        <li data-toggle="modal" data-target="#mapmodal"><a href="">Location</a></li>
+        <li><a href="">Pay Rate (adjusted)</a></li>
+    </ul>
+</div>
+<br />
+
+<div id="mapmodal" class="modal fade" tabindex="-1" role="dialog">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-body">
+                <img src="http://maps.googleapis.com/maps/api/staticmap?autoscale=2&size=800x600&maptype=roadmap&key=AIzaSyDodM8wUpuA2CAd6Fa1CEC0Drgv1vxsztM&format=png&visual_refresh=true&markers=size:mid%7Ccolor:0xff0000%7Clabel:F%7CBoston,+MA&markers=size:mid%7Ccolor:0xff0000%7Clabel:G%7CSalt+Lake+City,+UT&markers=size:mid%7Ccolor:0xff0000%7Clabel:B%7CNew+York,+NY" alt="Google Map of Internship Locations" class="img-responsive">
+            </div>
+        </div>
+    </div>
+</div>
+
 <div class="form-container">
     <form method="post">
-        <div ng-repeat="offer in vm.user.offers" id="{{offer.id}}modal" class="modal fade" tabindex="-1" role="dialog">
+        <div ng-repeat="internship in vm.user.internships" ng-if="internship.status == 'Offered'" id="{{internship.id}}modal" class="modal fade" tabindex="-1" role="dialog">
             <div class="modal-dialog">
                 <div class="modal-content">
                     <div class="modal-body">
                         <div class="form-group">
-                            <label for="company">Company Name</label>
-                            <input type="text" id={{offer.id}}+"company" class="form-control" ng-model=offer["company"]>
+                            <label for="companyName">Company Name</label>
+                            <input type="text" id={{internship.id}}+"companyName" class="form-control" ng-model=internship["companyName"]>
                         </div>
                         <div class="form-group">
                             <label for="role">Role</label>
-                            <input type="text" id={{offer.id}}+"role" class="form-control" ng-model=offer["role"]>
+                            <input type="text" id={{internship.id}}+"role" class="form-control" ng-model=internship["role"]>
                         </div>
                         <div class="form-group">
                             <label for="payrate">Pay Rate</label>
-                            <input type="text" id={{offer.id}}+"payrate" class="form-control" ng-model=offer["payrate"]>
+                            <input type="number" min="0" step="0.25" id={{internship.id}}+"payrate" class="form-control" ng-model=internship["payrate"]>
                         </div>
                         <div class="form-group">
                             <label for="location">Location</label>
-                            <input type="text" id={{offer.id}}+"location" class="form-control" ng-model=offer["location"]>
+                            <input type="text" id={{internship.id}}+"location" class="form-control" ng-model=internship["location"]>
                         </div>
                         <div class="form-group">
                             <label for="replyby">Reply By Date</label>
-                            <input type="date" id={{offer.id}}+"replyby" class="form-control" ng-model=offer["replyby"]>
+                            <input type="date" id={{internship.id}}+"replyby" class="form-control" ng-model=internship["replyby"]>
                         </div>
                         <div class="form-group">
                             <button class="btn btn-primary" ng-click="vm.saveOffers()" data-dismiss="modal">Save</button>
@@ -40,14 +61,16 @@
                     <th>Role</th>
                     <th>Pay Rate (Hourly)</th>
                     <th>Location</th>
+                    <th>Reply By Date</th>
                 </tr>
             </thead>
             <tbody>
                 <tr ng-repeat="internship in vm.user.internships" ng-if="internship.status == 'Offered'">
                     <td>{{internship.companyName}}</td>
                     <td>{{internship.role}}</td>
-                    <td>{{internship.recruiter}}</td>
+                    <td>{{internship.payrate}}</td>
                     <td>{{internship.location}}</td>
+                    <td>{{internship.replyby}}</td>
                     <td><button data-toggle="modal" data-target="#{{internship.id}}modal" type="button" class="btn btn-default">Edit</button></td>
                     <td><button class="btn btn-danger" ng-click="vm.rejectOffer(internship.id)">Reject Offer</button></td>
                 </tr>
