--- a/app/index.html
+++ b/app/index.html
@@ -13,11 +13,12 @@
     	<!-- header -->
     	<header>
     		<ul class="nav nav-tabs">
-    			<li ng-class="{active: activeTab === 'home'}"><a ui-sref="home">Home</a></li>
-    			<li ng-class="{active: activeTab === 'account'}"><a ui-sref="account">Account</a></li>
     			<li ng-class="{active: activeTab === 'internships'}"><a ui-sref="internships">Internships</a></li>
     			<li ng-class="{active: activeTab === 'offers'}"><a ui-sref="offers">Offers</a></li>
                 <li ng-class="{active: activeTab === 'discover'}"><a ui-sref="discover">Discover</a></li>
+                <li ng-class="{active: activeTab === 'calendar'}"><a ui-sref="calendar">Calendar</a></li>
+                <li ng-class="{active: activeTab === 'account'}"><a ui-sref="account">Account</a></li>
+
             </ul>
 
     		<div class="flash-message" ng-if="flash">
@@ -53,7 +54,7 @@
     	<script src="app.js"></script>
     	<script src="app-services/user.service.js"></script>
     	<script src="app-services/flash.service.js"></script>
-  		<script src="home/index.controller.js"></script>
+  		<script src="calendar/index.controller.js"></script>
     	<script src="account/index.controller.js"></script>
     	<script src="internships/index.controller.js"></script>
         <script src="offers/index.controller.js"></script>
