--- a/app/internships/index.html
+++ b/app/internships/index.html
@@ -23,6 +23,14 @@
 							<input type="text" id={{internship.id}}+"location" class="form-control" ng-model=internship["location"]>
 						</div>
 						<div class="form-group">
+							<label for="openDate">Application Open Date</label>
+							<input type="date" id = {{internship.id}}+"openDate" class="form-control" ng-model=internship["openDate"]>
+						</div>
+						<div class="form-group">
+							<label for="closeDate">Application Close Date</label>
+							<input type="date" id = {{internship.id}}+"closeDate" class="form-control" ng-model=internship["closeDate"]>
+						</div>
+						<div class="form-group">
 							<label for="status">Status</label>
 							<select ng-model=internship["status"]>
 							<option id={{internship.id}}+"status"  ng-repeat="x in ['Offered', 'Pending', 'Denied']">{{x}}</option>
@@ -42,6 +50,8 @@
 					<th>Role</th>
 					<th>Recruiter</th>
 					<th>Location</th>
+					<th>Open Date</th>
+					<th>Close Date</th>
 					<th>Status</th>
 				</tr>
 			</thead>
@@ -51,6 +61,8 @@
 					<td>{{internship.role}}</td>
 					<td>{{internship.recruiter}}</td>
 					<td>{{internship.location}}</td>
+					<td>{{internship.openDate}}</td>
+					<td>{{internship.closeDate}}</td>
 					<td>{{internship.status}}</td>
 					<td><button data-toggle="modal" data-target="#{{internship.id}}modal" type="button" class="btn btn-default">Edit</button></td>
 					<td><button class="btn btn-danger" ng-click="vm.deleteInternship(internship.id)">Delete Internship</button></td>
