first step at discover

--- a/app/index.html
+++ b/app/index.html
@@ -53,6 +53,7 @@
     	<script src="app.js"></script>
     	<script src="app-services/user.service.js"></script>
     	<script src="app-services/flash.service.js"></script>
+        <script src="app-services/discover.service.js"></script>
   		<script src="home/index.controller.js"></script>
     	<script src="account/index.controller.js"></script>
     	<script src="internships/index.controller.js"></script>
