--- a/app/discover/index.html
+++ b/app/discover/index.html
@@ -9,8 +9,8 @@
     <md-list>
       <md-list-item class="md-3-line" ng-repeat="item in vm.internships">
         <div class="md-list-item-text">
-          <h3>{{item.value}}</h3>
-          <h4>{{item.display}}</h4>
+          <h3>{{item.company}}</h3>
+          <h4>{{item.link}}</h4>
         </div>
         <md-button class="md-secondary">Apply</md-button>
         <md-divider ng-if="!$last"></md-divider>
