Decline offer button works

--- a/app/internships/index.html
+++ b/app/internships/index.html
@@ -39,7 +39,7 @@
 						<div class="form-group">
 							<label for="status">Status</label>
 							<select ng-model=internship["status"]>
-							<option id={{internship.id}}+"status"  ng-repeat="x in ['Offered', 'Pending', 'Denied']">{{x}}</option>
+							<option id={{internship.id}}+"status"  ng-repeat="x in ['Offered', 'Pending', 'Denied', 'Declined Offer']">{{x}}</option>
 							</select>
 						</div>
 						<div class="form-group">
