--- a/app/offers/index.html
+++ b/app/offers/index.html
@@ -54,7 +54,7 @@
                 </div>
             </div>
         </div>
-        <table class="table table-hover">
+        <table class="table table-hover" ts-wrapper>
             <thead>
                 <tr>
                     <th>Company</th>
@@ -65,7 +65,7 @@
                 </tr>
             </thead>
             <tbody>
-                <tr ng-repeat="internship in vm.user.internships" ng-if="internship.status == 'Offered'">
+                <tr ng-repeat="internship in vm.user.internships" ng-if="internship.status == 'Offered'" ts-repeat>
                     <td>{{internship.companyName}}</td>
                     <td>{{internship.role}}</td>
                     <td>{{internship.payrate}}</td>
