--- a/app/account/index.html
+++ b/app/account/index.html
@@ -1,7 +1,7 @@
 <h1>My Account</h1>
 <div class="form-container">
 <div id="deleteModal" class="modal fade" tabindex="-1" role="dialog">
-      <div class="modal-dialog vertical-align-center">
+      <div class="modal-dialog">
         <div class="modal-content">
             <div class="modal-body">
               <p> Are you sure you'd like to delete your InternGrindr account? This process is irreversable.
