--- a/app/offers/index.html
+++ b/app/offers/index.html
@@ -5,7 +5,7 @@
     <button class="btn btn-secondary dropdown-toggle" type="button" data-toggle="dropdown">Compare Offers
     <span class="caret"></span></button>
     <ul class="dropdown-menu">
-        <li data-toggle="modal" data-target="#mapmodal"><a href="">Location</a></li>
+        <li ng-click="vm.getLocations()" data-toggle="modal" data-target="#mapmodal"><a href="">Location</a></li>
         <li><a href="">Pay Rate (adjusted)</a></li>
     </ul>
 </div>
@@ -14,9 +14,7 @@
 <div id="mapmodal" class="modal fade" tabindex="-1" role="dialog">
     <div class="modal-dialog">
         <div class="modal-content">
-            <div class="modal-body">
-                <img src="http://maps.googleapis.com/maps/api/staticmap?autoscale=2&size=800x600&maptype=roadmap&key=AIzaSyDodM8wUpuA2CAd6Fa1CEC0Drgv1vxsztM&format=png&visual_refresh=true&markers=size:mid%7Ccolor:0xff0000%7Clabel:F%7CBoston,+MA&markers=size:mid%7Ccolor:0xff0000%7Clabel:G%7CSalt+Lake+City,+UT&markers=size:mid%7Ccolor:0xff0000%7Clabel:B%7CNew+York,+NY" alt="Google Map of Internship Locations" class="img-responsive">
-            </div>
+            <img ng-src={{vm.getLocations()}} alt="Google Map of Internship Locations" class="img responsive">
         </div>
     </div>
 </div>
