--- a/app/internships/index.html
+++ b/app/internships/index.html
@@ -1,5 +1,6 @@
 
 <h1>My Internships</h1>
+
 <div class="form-container">
 	<form method="post">
 		<div class-"form-group">
@@ -52,17 +53,38 @@
 		<table class="table table-hover">
 			<thead>
 				<tr>
-					<th>Company</th>
-					<th>Role</th>
-					<th>Recruiter</th>
-					<th>Location</th>
-					<th>Open Date</th>
-					<th>Close Date</th>
-					<th>Status</th>
+					<th>
+					<a href="#" ng-click="vm.sortType = 'companyName'">
+					Company
+					<span ng-show="vm.sortType == 'companyName'" class="fa fa-caret-down"></span></a></th>
+					<th>
+					<a href="#" ng-click="vm.sortType = 'role'">
+					Role
+					<span ng-show="vm.sortType == 'role'" class="fa fa-caret-down"></span></a></th>
+					<th>
+					<a href="#" ng-click="vm.sortType = 'recruiter'">
+					Recruiter
+					<span ng-show="vm.sortType == 'recruiter'" class="fa fa-caret-down"></span></a></th>
+					<th>
+					<a href="#" ng-click="vm.sortType = 'location'">
+					Location
+					<span ng-show="vm.sortType == 'location'" class="fa fa-caret-down"></span></a></th>
+					<th>
+					<a href="#" ng-click="vm.sortType = 'openDate'">
+					Open Date
+					<span ng-show="vm.sortType == 'openDate'" class="fa fa-caret-down"></span></a></th>
+					<th>
+					<a href="#" ng-click="vm.sortType = 'closeDate'">
+					Close Date
+					<span ng-show="vm.sortType == 'closeDate'" class="fa fa-caret-down"></span></a></th>
+					<th>
+					<a href="#" ng-click="vm.sortType = 'status'">
+					Status
+					<span ng-show="vm.sortType == 'status'" class="fa fa-caret-down"></span></a></th>
 				</tr>
 			</thead>
 			<tbody>
-				<tr ng-repeat="internship in vm.user.internships">
+				<tr ng-repeat="internship in vm.internshipList | orderBy:vm.sortType">
 					<td>{{internship.companyName}}</td>
 					<td>{{internship.role}}</td>
 					<td>{{internship.recruiter}}</td>
