--- a/app/offers/index.html
+++ b/app/offers/index.html
@@ -34,16 +34,16 @@
                             <input type="text" id={{internship.id}}+"role" class="form-control" ng-model=internship["role"]>
                         </div>
                         <div class="form-group">
-                            <label for="payrate">Pay Rate</label>
-                            <input type="number" min="0" step="0.25" id={{internship.id}}+"payrate" class="form-control" ng-model=internship["payrate"]>
+                            <label for="payRate">Pay Rate</label>
+                            <input type="number" min="0" step="0.25" id={{internship.id}}+"payRate" class="form-control" ng-model=internship["payRate"]>
                         </div>
                         <div class="form-group">
                             <label for="location">Location</label>
                             <input type="text" id={{internship.id}}+"location" class="form-control" ng-model=internship["location"]>
                         </div>
                         <div class="form-group">
-                            <label for="replyby">Reply By Date</label>
-                            <input type="date" id={{internship.id}}+"replyby" class="form-control" ng-model=internship["replyby"]>
+                            <label for="replyBy">Reply By Date</label>
+                            <input type="date" id={{internship.id}}+"replyBy" class="form-control" ng-model=internship["replyBy"]>
                         </div>
                         <div class="form-group">
                             <button class="btn btn-primary" ng-click="vm.saveOffers()" data-dismiss="modal">Save</button>
@@ -55,20 +55,35 @@
         <table class="table table-hover" ts-wrapper>
             <thead>
                 <tr>
-                    <th>Company</th>
-                    <th>Role</th>
-                    <th>Pay Rate (Hourly)</th>
-                    <th>Location</th>
-                    <th>Reply By Date</th>
+                    <th>
+                    <a href="" ng-click="vm.sortType = 'companyName'">
+                    Company
+                    <span ng-show="vm.sortType == 'companyName'" class="fa fa-caret-down"></span></a></th>
+                    <th>
+                    <a href="" ng-click="vm.sortType = 'role'">
+                    Role
+                    <span ng-show="vm.sortType == 'role'" class="fa fa-caret-down"></span></a></th>
+                    <th>
+                    <a href="" ng-click="vm.sortType = 'payRate'">
+                    Pay Rate (Hourly)
+                    <span ng-show="vm.sortType == 'payRate'" class="fa fa-caret-down"></span></a></th>
+                    <th>
+                    <a href="" ng-click="vm.sortType = 'location'">
+                    Location
+                    <span ng-show="vm.sortType == 'location'" class="fa fa-caret-down"></span></a></th>
+                    <th>
+                    <a href="" ng-click="vm.sortType = 'replyBy'">
+                    Reply By Date
+                    <span ng-show="vm.sortType == 'replyBy'" class="fa fa-caret-down"></span></a></th>
                 </tr>
             </thead>
             <tbody>
-                <tr ng-repeat="internship in vm.user.internships" ng-if="internship.status == 'Offered'" ts-repeat>
+                <tr ng-repeat="internship in vm.internshipList | orderBy:vm.sortType" ng-if="internship.status == 'Offered'">
                     <td>{{internship.companyName}}</td>
                     <td>{{internship.role}}</td>
-                    <td>{{internship.payrate}}</td>
+                    <td>{{internship.payRate}}</td>
                     <td>{{internship.location}}</td>
-                    <td>{{internship.replyby}}</td>
+                    <td>{{internship.replyBy}}</td>
                     <td><button data-toggle="modal" data-target="#{{internship.id}}modal" type="button" class="btn btn-default">Edit</button></td>
                     <td><button class="btn btn-danger" ng-click="vm.rejectOffer(internship.id)">Reject Offer</button></td>
                 </tr>
