i spelled a word wroung

--- a/app/account/index.html
+++ b/app/account/index.html
@@ -4,7 +4,7 @@
       <div class="modal-dialog">
         <div class="modal-content">
             <div class="modal-body">
-              <p> Are you sure you'd like to delete your InternGrindr account? This process is irreversable.
+              <p> Are you sure you'd like to delete your InternGrindr account? This process is irreversible.
               </p>
               <button class="btn btn-danger" ng-click="vm.deleteUser()" data-dismiss="modal">Delete</button>
               <button class="btn btn-primary" data-dismiss="modal">No, I'd like to keep grindring</button>
