--- a/app/internships/index.html
+++ b/app/internships/index.html
@@ -92,7 +92,7 @@
 					<td>{{internship.openDate}}</td>
 					<td>{{internship.closeDate}}</td>
 					<td>{{internship.status}}</td>
-					<td><button data-toggle="modal" data-target="#{{internship.id}}modal" type="button" class="btn btn-default">Edit</button></td>
+					<td><button data-toggle="modal" data-target="#{{internship.id}}modal" type="button" class="btn btn-primary">Edit</button></td>
 					<td><button class="btn btn-danger" ng-click="vm.deleteInternship(internship.id)">Delete Internship</button></td>
 				</tr>
 			</tbody>
