--- a/app/offers/index.html
+++ b/app/offers/index.html
@@ -69,7 +69,7 @@
                     <td>{{internship.payrate}}</td>
                     <td>{{internship.location}}</td>
                     <td>{{internship.replyby}}</td>
-                    <td><button data-toggle="modal" data-target="#{{internship.id}}modal" type="button" class="btn btn-default">Edit</button></td>
+                    <td><button data-toggle="modal" data-target="#{{internship.id}}modal" type="button" class="btn btn-primary">Edit</button></td>
                     <td><button class="btn btn-danger" ng-click="vm.rejectOffer(internship.id)">Reject Offer</button></td>
                 </tr>
             </tbody>
